--- a/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
+++ b/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             <span class="icon-bar">Some Other Place</span>
             <span class="icon-bar">This Thing</span>
           </button>
-          <a class="navbar-brand" href="#">GoodbyeHelloWorld</a>
+          <a class="navbar-brand" href="#">GoodbyeHelloWorld.io</a>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <p>This is a template for a simple little app that we are going to use to learn all about angular js.</p>
+        <p>This is a template for a simple little app that we are going to use to learn all about angular js, typescript and javascript and css and things.</p>
         <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
@@ -50,12 +50,13 @@
 
         @Scripts.Render("~/bundles/vendor")
         @Scripts.Render("~/bundles/user")
+
         @RenderSection("scripts", required: false)
 
       <hr>
 
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Some Odd Company 2014</p>
       </footer>
     </div>
     </body>
