--- a/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
+++ b/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <div class="jumbotron">
       <div class="container">
         <p>This is a template for a simple little app that we are going to use to learn all about angular js, typescript and javascript and css and things.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default btn-lg" role="button" href="http://www.typescriptlang.org/">Learn more &raquo;</a></p>
       </div>
     </div>
 
