the test button

--- a/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
+++ b/src/GoodByeHelloWorld/Views/Shared/_Layout.cshtml
@@ -40,8 +40,11 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <p>This is a template for a simple little app that we are going to use to learn all about angular js, typescript and javascript and css and things.</p>
-        <p><a class="btn btn-default btn-lg" role="button" href="http://www.typescriptlang.org/">Learn more &raquo;</a></p>
+          <p>This is a template for a simple little app that we are going to use to learn all about angular js, typescript and javascript and css and things.</p>  
+          <div class="row">
+              <p class="col-md-2"><a class="btn btn-default btn-lg" role="button" href="http://www.typescriptlang.org/">Learn more &raquo;</a></p>
+              <p class="col-md-2"><a class="btn btn-default btn-lg" role="button" href="Jasmine/Run">Run Tests &raquo;</a></p>
+          </div>
       </div>
     </div>
 
